namespace Qbc.Workboard.Domain;

public enum BoardStatus
{
    ToDo,
    InProgress,
    Done
}

