namespace Qbc.Workboard.Domain;

public enum StoryLifecycle
{
    Draft,
    Active,
    Archived
}

